--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -1,130 +1,18 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-<meta charset="utf-8" />
-<title>Blog</title>
-
-<link href="/stylesheets/application.css" rel="stylesheet" />
-
-<link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic' rel='stylesheet' type='text/css'>
-
-<!--[if lt IE 9]>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-
-<!--[if lt IE 9]>
-<link href="/stylesheets/ie.css" rel="stylesheet" />
-<![endif]-->
-</head>
-
-<body>
-<div id="container">
-	<header>
-		<h1><a href="#" title="Return to the homepage">Typo</a></h1>
-		
-		<nav role="navigation">
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Archives</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
-	
-	<div id="content" role="main">
-		<%= yield %>
-		<% if false %>
-		<article>
-			<h2><a href="#">Getting your stock photos seen</a></h2>
-			
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed turpis turpis, eu mattis sem. Sed tristique porta cursus. Class <a href="#">aptent taciti</a> sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec vestibulum, enim nec condimentum ullamcorper, magna ipsum sagittis sapien, vel egestas lorem mi et neque. Nulla ultrices felis eget arcu vulputate at hendrerit augue euismod. Nulla at velit ac turpis sollicitudin consequat. Etiam leo tortor, faucibus a consectetur et, consequat venenatis velit. Curabitur tempus sem vitae elit gravida a suscipit leo placerat.</p>
-			
-			<ul class="postinfo">
-				<li>17th October 2011</li>
-				<li>Posted in <a href="#">Articles</a></li>
-				<li><a href="#">Continue Reading &raquo;</a></li>
-			</ul>
-		</article>
-	    <% end %> 
-	
-		
-
-		<nav id="pagination">
-			<ul>
-				<li class="older"><a href="#">&laquo; Older posts</a></li>
-				<li class="newer"><a href="#">Newer posts &raquo;</a></li>
-			</ul>
-		</nav>
-		
-	</div>
-
-	<aside id="sidebar">
-		<section id="about">
-			<h3>About me</h3>
-			<p>Typo is a WordPress theme based entirely on a balanced typographic design. A strict grid layout keeps everything tidy, allowing the content to shine. <a href="#" class="more">Find out more &raquo;</a></p>
-		</section>
-		
-		<section id="categories">
-			<h3>Categories</h3>
-			<ul>
-				<li><a href="#">Articles</a></li>
-				<li><a href="#">Design</a></li>
-				<li><a href="#">Graphics</a></li>
-				<li><a href="#">Inspiration</a></li>
-				<li><a href="#">Retro</a></li>
-			</ul>
-		</section>
-		
-		<section id="social">
-			<h3>Social</h3>
-			<ul>
-				<li><a href="#">Twitter</a></li>
-				<li><a href="#">Facebook</a></li>
-				<li><a href="#">Flickr</a></li>
-				<li><a href="#">Behance</a></li>
-				<li><a href="#">Last.FM</a></li>
-				<li><a href="#">YouTube</a></li>
-			</ul>
-		</section>
-		
-		<section id="latest">
-			<h3>Latest posts</h3>
-			<ul>
-				<li><a href="#">Getting your stock photos seen</a></li>
-				<li><a href="#">Top 10 tips for new bloggers</a></li>
-				<li><a href="#">10 fantastic photography tips</a></li>
-			</ul>
-		</section>
-		
-		<section id="search" role="search">
-			<h3>Search</h3>
-			
-			<form method="get" action="#">
-				<fieldset>
-					<input type="text" id="searchbar" placeholder="I'm looking for&hellip;" />
-					<input type="submit" id="searchsubmit" value="Search" />
-				</fieldset>
-			</form>
-			
-		</section>
-		
-	</aside>
-
-</div>
-
-<div id="footer-container">
-	<footer>
-		<ul id="credits">
-			<li class="wordpress"><a href="http://wordpress.org">Powered by WordPress</a></li>
-			<li class="spoongraphics"><a href="http://www.blog.spoongraphics.co.uk">Theme by SpoonGraphics</a></li>
-		</ul>
-	
-		<p id="back-top"><a href="#">Back to top</a></p>
-	</footer>
-</div>
-	
-
-</body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/application.css">
+		<link rel="stylesheet" type="text/css" href="/stylesheets/ie.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
+    <title>Blog</title>
+  </head>
+  <body>
+    <section>
+      <%= yield %> 
+    </section>
+    <footer>
+      Powered By <a href="http://www.padrinorb.com">Padrino</a>
+    </footer>
+  </body>
 </html>
+
