--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,11 +1,20 @@
-<div class="post">
-  <div class="title">
-  	<%= link_to @post.title, url_for(:posts, :show, :id => @post)%>
-  </div>
-  <div class="date">
-  	<%= time_ago_in_words(@post.created_at || Time.now) + " ago"%>
-  </div>
-  <div class="body">
-  	<%= @post.body %>
-  </div>
-</div>
+<article class="post">
+  <header>
+    <h1><%= @post.title %></h1>
+    <span class="date"><%= @post.created_at %></span>
+  </header>
+
+  <section class="content">
+    <%=@post.body %>
+  </section>
+
+  <section class="comments">
+    <% if false %>
+      <div id="disqus_thread"></div>
+      <script type="text/javascript" src="http://disqus.com/forums/<%= @config[:disqus] %>/embed.js"> </script>
+      <noscript><a href="http://<%= @config[:disqus] %>.disqus.com/?url=ref">View the discussion thread.</a></noscript>
+      <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+    <% end %>
+  </section>
+</article>
+
