--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,212 +1,110 @@
-body, div, h1, h2, h3, h4, h5, h6, p, ul, ol, li, dl, dt, dd, img, form, fieldset, input, textarea, blockquote {
-	margin: 0; padding: 0; border: 0;
-}
-
+html { margin: 20px }
 body {
-	background: #dedede url(/images/bg.jpg);
-	font-family: 'Droid Serif', serif; font-size: 14px;
-	line-height: 24px;
-	color: #666;
-}
+  margin: 0 auto;
+  font-family: 'Baskerville', Georgia, Times, serif;
+  font-size: 20px;
+  line-height: 30px;
+  padding: 15px;
+  width: 720px;
 
-a {
-	color: #4b7ea9; font-style: italic;
 }
-	a:hover {
-		color: #105896;
-	}
-	
-header a, h2 a {
-	color: #666; font-style: normal; text-decoration: none;
+header, footer, section, article {
+	display: block;
 }
-
-#container {
-	width: 916px; margin: 0 auto; padding: 48px 22px 0 22px;
-	
-	background: url(/images/grid.jpg); overflow: hidden;
-}
-
-
-header {
-	margin: 0 0 98px 0; 
-}
-	
-	header h1 {
-		float: left; font-size: 36px;
-		font-weight: normal;
-	}
-	
-	header nav {
-		float: right; text-align: right;
-		padding: 6px 0 0 0;
-	}
-		header nav ul {
-			list-style: none;
-		}
-			header nav li {
-				float: left; font-size: 18px;
-				width: 136px; margin: 0 0 0 20px;
-			}
-			
-			header nav li:nth-child(1):before {
-				content: "1. ";
-				color: #a2a2a2;
-			}
-			header nav li:nth-child(2):before {
-				content: "2. ";
-				color: #a2a2a2;
-			}
-			header nav li:nth-child(3):before {
-				content: "3. ";
-				color: #a2a2a2;
-			}
-			header nav li:nth-child(4):before {
-				content: "4. ";
-				color: #a2a2a2;
-			}
-			header nav li:nth-child(5):before {
-				content: "5. ";
-				color: #a2a2a2;
-			}
-			
 #content {
-	float: left; width: 526px;
-	margin: 0 98px 0 0;
+}
+#by {
+	font-style: italic;
+  margin-right: 5px;
+	font-size: 28px;
+}
+#caption {
+	position: absolute;
+	font-size: 24px;
+	margin: -135px 0 0 70px;
+}
+#path {
+	color: #b53131;
+}
+.date {
+  font-style: italic;
+  float: right;
+  line-height: 43px;
+  margin-right: 30px;
+}
+a {
+  color: #b83000;
+}
+h1 a {
+  color: black;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+body > header > h1 {
+	border-left: 30px solid black;
+	padding-left: 30px;
+  font-size: 201px;
+  margin: 100px 0 15px 0;
+  font-weight: normal;
+}
+.post header {
+	margin-bottom: 10px;
+}
+.post .body p:first-child {
+	margin-top: 0;
+}
+.post .body p:last-child {
+	margin-bottom: 0;
+}
+.post {
+	margin-bottom: 30px;
+}
+.post:last-child {
+  margin-bottom: 10px;
+}
+.post p {
+  margin: 10px 0;
+}
+.post .more {
+  margin-top: -10px;
+  margin-right: 30px;
+  font-style: italic;
+  text-align: right;
+}
+.more a {
+  text-decoration: none;
+}
+.more a:hover { text-decoration: underline }
+body > header {
+	display: block;
+	padding-top: 30px;
+	line-height: 180px;
+	margin-bottom: 20px;
+}
+h1, h2, h3, h4 {
+  display: inline;
+  margin: 0;
+  font-weight: 600;
+}
+ul, li {
+  list-style-type: none;
+}
+code {
+  font-family: 'Anonymous Pro', 'Bitstream Vera Sans', 'Monaco', Courier, mono;
+}
+pre {
+  padding: 20px;
+}
+blockquote {
+  font-style: italic;
 }
 
-	#content article {
-		margin: 0 0 67px 0;		
-	}
-		#content article h2 {
-			font-size: 30px; margin: 0 0 29px 0;
-			font-weight: normal;
-		}
-
-		#content p {
-			margin: 0 0 24px 0;
-		}
-		
-		#content .postinfo {
-			list-style: none; overflow: hidden;
-		} 
-			#content .postinfo li {
-				float: left; width: 136px; margin: 0 20px 0 0;
-				font-style: italic; color: #a2a2a2;
-			}
-		
-#pagination {
-	overflow: hidden; margin: 0 0 120px 0;
-}		
-	#pagination ul {
-		list-style: none;
-	}
-		#pagination li {
-			font-size: 18px;
-		}
-			#pagination li.older {
-				float: left;
-			}
-			#pagination li.newer {
-				float: right;
-			}
-		
-
-#sidebar {
-	width: 292px; float: left;
-	padding: 4px 0 0 0;
+body > footer {
+  text-align: left;
+  margin-left: 10px;
+	font-style: italic;
+  font-size: 18px;
+  color: #888;
 }
-	#sidebar h3 {
-		font-size: 18px; font-weight: normal;
-		margin: 0 0 25px 0;
-	}		
-	
-	#sidebar ul {
-		list-style: none;
-	}
-	
-	#sidebar section {
-		margin: 0 0 47px 0;
-	}
-	
-	#sidebar #about a.more {
-		display: block; text-align: right;
-	}
-		
-	#sidebar #categories {
-		width: 136px; float: left; 
-		margin: 0 20px 0 0;
-	}
-	
-	#sidebar #social {
-		width: 136px; float: left; 
-	}
-		
-	#sidebar #search #searchbar {
-		width: 230px; height: 36px; float: left;
-		border: 1px solid #c7c7c7; padding: 0 45px 0 15px; margin: -8px 0 0 0;
-		background: #e2e2e2; /* Old browsers */
-		background: -moz-linear-gradient(top, #e2e2e2 0%, #ffffff 16%); /* FF3.6+ */
-		background: -webkit-linear-gradient(top, #e2e2e2 0%,#ffffff 16%); /* Chrome10+,Safari5.1+ */
-		
-		font-size: 14px; font-style: italic; color: #a2a2a2;
-	}
-		#sidebar #search #searchsubmit {
-			width: 17px; height: 17px; float: right; margin: -27px 15px 0 0;
-			background: url(/images/search-icon.png); text-indent: -9999px;
-		}
-		
-#footer-container {
-	background: rgba(0,0,0,0.2); 
-	overflow: hidden;
-}
-	footer {
-		width: 916px; margin: 0 auto; padding: 10px 22px 50px 22px;
-	}
-	footer #credits {
-		list-style: none; float: left; 
-		}			
-		footer #credits li {
-			float: left; margin: 0 6px 0 0;
-		}
-			footer #credits li.wordpress a {
-				display: block; width: 20px; height: 20px;
-				background: url(/images/credits.png) no-repeat 0 0; text-indent: -9999px;
-			}
-			footer #credits li.spoongraphics a {
-				display: block; width: 25px; height: 20px;
-				background: url(/images/credits.png) no-repeat -30px 0; text-indent: -9999px;
-			}
-				
-		footer #back-top {
-			float: right; font-size: 12px;
-		}
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
