--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -3,7 +3,7 @@
     <article class="post">
       <header>
         <h1><%= link_to post.title, url(:posts, :show, :id => post.id)%></h1>
-        <span class="date"><%= post.created_at %></span>
+        <span class="date"><%= readable_date(post.created_at) %></span>
       </header>
 
       <section class="content">
