--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,7 +1,7 @@
 <article class="post">
   <header>
     <h1><%= @post.title %></h1>
-    <span class="date"><%= @post.created_at %></span>
+    <span class="date"><%= readable_date(@post.created_at) %></span>
   </header>
 
   <section class="content">
