--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -7,7 +7,7 @@
       </header>
 
       <section class="content">
-        <%= post.body %>
+        <%= post.rich_body %>
       </section>
       <div class="more"><%= link_to "read on »", url(:posts, :show, :id => post.id)%></div>
     </article>
