--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -5,7 +5,7 @@
   </header>
 
   <section class="content">
-    <%=@post.body %>
+    <%= @post.rich_body %>
   </section>
 
   <section class="comments">
