--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -5,8 +5,69 @@
 		<link rel="stylesheet" type="text/css" href="/stylesheets/ie.css">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
     <title>Blog</title>
+		<style>
+		      body > header {
+		        font-family: 'Myriad Pro', Arial, sans-serif;
+		        text-align: right;
+		        width: 720px;
+		        font-size: 18px;
+		      }
+		      body > header a {
+		        color: #ddd;
+		        border: 0;
+		      }
+		      body > header:hover a {
+		        color: black;
+		        border-bottom: 1px dotted #bbb; }
+		      body > header a:hover {
+		        color: #b83000;
+		      }
+		      body > header li {
+		        display: inline;
+		        margin: 0 15px;
+		      }
+		      body > header ul {
+		        margin: 0;
+		        padding: 0;
+		      }
+		      body > header > span {
+		        float: left;
+		      }
+		      #feed-icon {
+		        border: 0;
+		        margin-right: 5px;
+		      }
+		      #feed-icon img {
+		        margin-top: -5px;
+		      }
+		      #home {
+		        margin: 0;
+		        padding: 0;
+		      }
+		      #home > section {
+		        min-width: 720px;
+		        position: absolute;
+		        margin: 0;
+		        bottom: 0;
+		        padding: 0;
+		        height: 800px;
+		        width: 960px;
+		        
+		      }
+		    </style>
   </head>
   <body>
+		<header>
+		        <span>
+		          <a href="" rel="alternate" type="application/rss+xml" id="feed-icon"><img src="http://www.feedburner.com/fb/images/pub/feed-icon16x16.png" alt="" style="vertical-align:middle;border:0"></a>
+		          <a href="/">Hooopo's Blog</a>
+		        </span>
+		        <ul>
+		          <li><a href="/posts">Blog</a></li>
+		          <li><a href="http://github.com/hooopo/">Github</a></li>
+		          <li><a href="http://twitter.com/hooopo">@hooopo</a></li>
+		        </ul>
+		      </header>
     <section>
       <%= yield %> 
     </section>
