--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -59,7 +59,7 @@
   <body>
 		<header>
 		        <span>
-		          <a href="" rel="alternate" type="application/rss+xml" id="feed-icon"><img src="http://www.feedburner.com/fb/images/pub/feed-icon16x16.png" alt="" style="vertical-align:middle;border:0"></a>
+		          <a href="/posts.atom" rel="alternate" type="application/rss+xml" id="feed-icon"><img src="http://www.feedburner.com/fb/images/pub/feed-icon16x16.png" alt="ATOM" style="vertical-align:middle;border:0"></a>
 		          <a href="/">Hooopo's Blog</a>
 		        </span>
 		        <ul>
